--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,8 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
+          <th scope="col">Edit</th>
         </tr>
       </thead>
       <tbody>
@@ -24,8 +26,19 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form method="POST" action="/urls/<%= url %>/delete">
+                <button type= "submit" class= "btn btn btn-danger mb-2">Delete</button>
+              </form>
+            </td>
+            <td>
+              <form method="POST" action="/urls/<%= url %>/update">
+                <button type= "submit" class= "btn btn btn-primary mb-2">Edit</button>
+              </form>
+            </td>
           </tr>
         <% } %>
+        </form>
       </tbody>
     </table>
   </main>
