--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,22 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+      <div>
+        <% if (username) { %>
+          <form class="form-inline" action="urls/logout" method="POST">
+            <div class="form-group mb-2">
+             <span style="margin: 1em">Logged in as: <%= username %> !</span>
+              <button type="submit" class="btn btn btn-outline-dark mb-0">  Logout</button>
+            </div>
+          </form>
+          <% } else { %>
+            <form class="form-inline" action="urls/login" method="POST">
+              <div class="form-group mb-1">
+                <input class="form-control" type="text" name="username" placeholder="Username" style="width: 300px; margin: 1em">
+                <button type="submit" class="btn btn btn-outline-dark mb-0">Login</button>
+              </div>
+            </form>
+            <% } %>
+      </div>
   </nav>
 </header>
