--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-  <%- include('partials/_header') %>
+  <Header>
+  <%- include('./partials/_header') %>
+  </Header>
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
