--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,7 +32,7 @@
               </form>
             </td>
             <td>
-              <form method="POST" action="/urls/<%= url %>/update">
+              <form method="GET" action="/urls/<%= url %>/update">
                 <button type= "submit" class= "btn btn btn-primary mb-2">Edit</button>
               </form>
             </td>
