--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -14,7 +14,7 @@
         <% if (username) { %>
           <form class="form-inline" action="urls/logout" method="POST">
             <div class="form-group mb-2">
-             <span style="margin: 1em">Logged in as: <%= username %> !</span>
+             <span style="margin: 1em">Logged in as: <%= username.email %> !</span>
               <button type="submit" class="btn btn btn-outline-dark mb-0">  Logout</button>
             </div>
           </form>
