--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,10 +17,10 @@
   <h1>Register</h1>
   <form method="POST" action="/register">
     <label for="email"></label>
-    <input id="email" type="email" name="email" required/>
+    <input id="email" type="email" name="email" placeholder="Email" required/>
     <br/>
     <label for="password"></label>
-    <input id="password" type="password" name="password" required/>
+    <input id="password" type="password" name="password" placeholder="Password" required/>
     <br/>
     <button type="Submit">Register</button>
   </form>
