--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -14,17 +14,24 @@
         <% if (username) { %>
           <form class="form-inline" action="/logout" method="POST">
             <div class="form-group mb-2">
-             <span style="margin: 1em">Logged in as: <%= username.email %> !</span>
+             <span style="margin: 1em">Logged in as: <%= username.email %> </span>
               <button type="submit" class="btn btn btn-outline-dark mb-0">  Logout</button>
             </div>
           </form>
           <% } else { %>
-            <form class="form-inline" action="/register" method="POST">
+            <form class="form-inline" action="/register" method="POST"></form>
+            <a href="/register">
+              <button>Register</button>
+            </a>
+          </form>
+            
+            
+            <!-- <form class="form-inline" action="/register" method="POST">
               <div class="form-group mb-1">
-                <!-- <input class="form-control" type="text" name="username" placeholder="Username" style="width: 300px; margin: 1em"> -->
+                <input type="text" name="username" placeholder="Username" style="width: 300px; margin: 1em">
                 <button type="submit" action="/register" class="btn btn btn-outline-dark mb-0">Register</button>
               </div>
-            </form>
+            </form> -->
             <% } %>
       </div>
   </nav>
