--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,11 +24,11 @@
         </div>
       </div>
         <div>
-              <form class="form-inline" action="/register" method="POST">
-                <div class="form-group mb-1">
-                  <button type="submit" class="btn btn btn-outline-dark mb-0">Register</button>
-                </div>
-              </form>
+          <form class="form-inline" action="/register" method="GET">
+            <div class="form-group mb-1">
+              <button type="submit" class="btn btn btn-outline-dark mb-0">Register</button>
+            </div>
+          </form>
         </div>
     </nav>
   </header>
